First medicine UI added, add meal tab renamed to add intake tab, color of buttons changed in add intake tab
Signed-off-by: Prathamesh Bhagat <prathameshbhagat0608@gmail.com>

--- a/app/src/main/res/layout/fragment_add_intake_tab.xml
+++ b/app/src/main/res/layout/fragment_add_intake_tab.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragments.AddMealTab">
+    tools:context=".fragments.AddIntakeTab">
 
     <!-- LinearLayout to hold all the views for intake logging -->
     <LinearLayout
@@ -17,11 +17,11 @@
             android:id="@+id/add_meal_label"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
             android:layout_marginStart="20dp"
+            android:layout_marginTop="20dp"
             android:text="Add meal"
             android:textColor="#000000"
-            android:textSize="20sp"
+            android:textSize="15sp"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -77,8 +77,8 @@
                     android:text="Eat up to 2,200 Cal"
                     android:textAlignment="center"
                     android:textColor="@color/black"
-                    android:textStyle="bold"
                     android:textSize="15sp"
+                    android:textStyle="bold"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toEndOf="@+id/add_meal_logo_card"
                     app:layout_constraintTop_toTopOf="parent" />
@@ -89,7 +89,7 @@
                     android:layout_width="50dp"
                     android:layout_height="50dp"
                     android:layout_margin="10dp"
-                    android:backgroundTint="#333ddd"
+                    android:backgroundTint="#000000"
                     app:cardCornerRadius="30dp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -100,6 +100,109 @@
                         android:id="@+id/add_meal_button_text_view"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:text="+"
+                        android:textColor="@color/white"
+                        android:textSize="25sp" />
+
+                </androidx.cardview.widget.CardView>
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+        </androidx.cardview.widget.CardView>
+
+        <!-- Text View for medicine logging  -->
+        <TextView
+            android:id="@+id/add_medicine_label"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="30dp"
+            android:text="Medicine intake"
+            android:textColor="#000000"
+            android:textSize="15sp"
+            android:textStyle="bold"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <!-- Card View for adding today's meal -->
+        <androidx.cardview.widget.CardView
+            android:id="@+id/add_medicine_card"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            app:cardCornerRadius="40dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/add_other_log_weight_card"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/add_other_label">
+
+            <!-- Constraint Layout for adding today's meal -->
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/add_medicine_constraint_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <!-- Card View for add meal logo  -->
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/add_medicine_logo_card"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:layout_margin="10dp"
+                    android:backgroundTint="#444eee"
+                    app:cardCornerRadius="20dp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toStartOf="@id/add_medicine_text_view"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent">
+
+                    <!-- ImageView for add meal logo -->
+                    <TextView
+                        android:id="@+id/add_medicine_remove_button_text_view"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:background="#444eee"
+                        android:layout_gravity="center"
+                        android:text="-"
+                        android:textColor="@color/white"
+                        android:textStyle="bold"
+                        android:textSize="25sp" />
+
+                </androidx.cardview.widget.CardView>
+
+                <!-- Text View for add meal text -->
+                <TextView
+                    android:id="@+id/add_medicine_text_view"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:text="Paracetamol"
+                    android:textAlignment="center"
+                    android:textColor="@color/black"
+                    android:textSize="15sp"
+                    android:textStyle="bold"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toStartOf="@+id/add_medicine_button"
+                    app:layout_constraintStart_toEndOf="@+id/add_medicine_logo_card"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <!-- CardView for add meal button -->
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/add_medicine_button"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:layout_margin="10dp"
+                    android:backgroundTint="#444eee"
+                    app:cardCornerRadius="30dp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent">
+
+                    <!-- Text View for add meal button -->
+                    <TextView
+                        android:id="@+id/add_medicine_button_text_view"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:background="#444eee"
                         android:layout_gravity="center"
                         android:text="+"
                         android:textColor="@color/white"
@@ -126,7 +229,7 @@
                 android:layout_margin="10dp"
                 android:text="Other Measures"
                 android:textColor="#000000"
-                android:textSize="20sp"
+                android:textSize="15sp"
                 android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -173,7 +276,7 @@
                                 android:id="@+id/add_other_remove_water_text_view"
                                 android:layout_width="20dp"
                                 android:layout_height="20dp"
-                                android:background="#350069"
+                                android:background="#505050"
                                 android:text="-"
                                 android:textAlignment="center"
                                 android:textColor="@color/white"
@@ -220,7 +323,7 @@
                                 android:id="@+id/add_other_add_water_text_view"
                                 android:layout_width="20dp"
                                 android:layout_height="20dp"
-                                android:background="#350069"
+                                android:background="#505050"
                                 android:text="+"
                                 android:textAlignment="center"
                                 android:textColor="@color/white" />
@@ -297,7 +400,7 @@
                                 android:id="@+id/add_other_remove_weight_text_view"
                                 android:layout_width="20dp"
                                 android:layout_height="20dp"
-                                android:background="#350069"
+                                android:background="#505050"
                                 android:text="-"
                                 android:textAlignment="center"
                                 android:textColor="@color/white"
@@ -344,7 +447,7 @@
                                 android:id="@+id/add_other_add_weight_text_view"
                                 android:layout_width="20dp"
                                 android:layout_height="20dp"
-                                android:background="#350069"
+                                android:background="#505050"
                                 android:text="+"
                                 android:textAlignment="center"
                                 android:textColor="@color/white" />
